# snotra

./: .dockerignore  .gitignore  .pylintrc  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
backend/: go.mod  main.py  settings.py
backend/database/: async_database.py  base.py
backend/database/migrations/: env.py
docker/: api.dockerfile
scripts/: api_reload.sh
