[tool.poetry]
name = "snotra"
version = "0.1.0"
description = ""
authors = ["Mário Victor Ribeiro Silva <mariovictorrs@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
alembic = "^1.7.6"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.31"}
pydantic = "^1.9.0"
asyncpg = "^0.25.0"
python-dotenv = "^0.19.2"
result = "^0.7.0"
dependency-injector = "^4.38.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"
flake8 = "^4.0.1"
mypy = "^0.931"
sqlalchemy-stubs = "^0.4"
vulture = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = ["migrations/"]

[tool.vulture]
exclude = ["migrations/"]
make_whitelist = true
min_confidence = 80
paths = ["backend/"]
sort_by_size = true
ignore_names = ["cls"]